[package]
name = "deauthe"
authors = ["pro-utkarshM <projects.utkarshMaurya@gmail.com>"]
version = "0.1.0"
edition = "2021"

# [features]
# library = []

# [lib]
# crate-type = ["cdylib", "rlib"]

# [dependencies]
# cosmwasm-std = { version = "2.0.2", features = ["staking"] }
# sylvia = "1.0.2"
# serde = "1.0.198"                                            # required by sylvia's macro expansions
# schemars = "0.8"                                             # required by sylvia's macro expansions
# cosmwasm-schema = "2.0.2"
# cw-storage-plus = "2.0.0"
# serde_json = "1.0.108"
# thiserror = "1.0.44"
# cw721 = "0.18.0"
# cw20 = "1.1.2"
# cw20-base = "1.1.2"


# [dev-dependencies]
# sylvia = { version = "1.0.2", features = ["mt"] }
# cw721-base = "0.18.0"
# cw-multi-test = "0.19.0"

[lib]
crate-type = ["cdylib", "rlib"]

# [alias]
# wasm = "build --target wasm32-unknown-unknown --release --lib"
# wasm-debug = "build --target wasm32-unknown-unknown --lib"
# schema = "run schema"

[dependencies]
cosmwasm-std = { version = "1.3.1", features = ["staking"] }
cw-storage-plus = "1.1.0"
sylvia = "0.7.0"
schemars = "0.8.12"
cosmwasm-schema = "1.3.1"
serde = "1.0.180"
serde_json = "1.0.108"
thiserror = "1.0.44"
cw721 = "0.18.0"
cw20 = "1.1.2"
cw20-base = "1.1.2"

[dev-dependencies]
cw721-base = "0.18.0"
cw-multi-test = "0.19.0"